--- a/front-and-back-matter/_abstract.Rmd
+++ b/front-and-back-matter/_abstract.Rmd
@@ -1,4 +1,4 @@
-HIV remains a large problem.
+Progress towards ending AIDS as a public health threat by 2030 is faltering.
 Disease burden is unevenly distributed.
 Effective public health response and prioritised prevention requires accurate, timely, high-resolution estimates of epidemic and demographic indicators.
 Thoughtful statistical modelling is required to overcome significant data challenges.
