--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,11 +1,11 @@
 Thanks to Jeff Eaton and Seth Flaxman for supervision of this research;
 staff and students of the StatML CDT at Imperial and Oxford;
-members of the HIV inference group at Imperial;
+members of the HIV Inference Group at Imperial;
+the Bill & Melinda Gates Foundation and EPSRC for funding this PhD;
 Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to MIT;
 Alex Stringer for hosting my visit to Waterloo;
 the Effective Altruism community;
-the Bill & Melinda Gates Foundation and EPSRC for funding this PhD;
-my friends and family for their support.
+my friends and family.
 
 \begin{flushright}
 Adam Howes \\
