--- a/index.Rmd
+++ b/index.Rmd
@@ -5,16 +5,22 @@
 title: |
   Methods and applications of Bayesian spatio-temporal statistics for prioritised HIV prevention
 author: Adam Howes
-university: Imperial College London
+college: Department of Mathematics
+university: |
+  Imperial College London
 university-logo: templates/ic-small.pdf
-submitted-text: A thesis submitted for the degree of
+submitted-text: In partial fulfillment of the requirements for the degree of
 degree: Doctor of Philosophy
-degreedate: 2023
+degreedate: September 2023
+copyright: |
+  `r paste(readLines("front-and-back-matter/_copyright.Rmd"), collapse = '\n  ')`
+originality: |
+  `r paste(readLines("front-and-back-matter/_originality.Rmd"), collapse = '\n  ')`
 abstract: |
   `r paste(readLines("front-and-back-matter/_abstract.Rmd"), collapse = '\n  ')`
 acknowledgements: |
   `r paste(readLines("front-and-back-matter/_acknowledgements.Rmd"), collapse = '\n  ')`
-dedication: For $\sum_i u_i$
+dedication: \textit{For $\sum_i u_i$ subject to side constraints}
 abbreviations: "front-and-back-matter/abbreviations" # path to .tex file with abbreviations
 notations: "front-and-back-matter/notations"
 
@@ -41,19 +47,19 @@ word-count: 10,052
 corrections: true
 
 ## binding / margins ##
-page-layout: nobind #'nobind' for equal margins (PDF output), 'twoside' for two-sided binding (mirror margins and blank pages), leave blank for one-sided binding (left margin > right margin)
+page-layout: nobind # 'nobind' for equal margins (PDF output), 'twoside' for two-sided binding (mirror margins and blank pages), leave blank for one-sided binding (left margin > right margin)
 
 ## position of page numbers ##
-ordinary-page-number-foot-or-head: foot #'foot' puts page number in footer, 'head' in header
-ordinary-page-number-position: C  #C = center, R = right, L = left. If page layout is 'twoside', O = odd pages and E = even pages. E.g. RO,LE puts the page number to the right on odd pages and left on even pages
-chapter-page-number-foot-or-head: foot #you may want it to be different on the chapter pages
+ordinary-page-number-foot-or-head: foot # 'foot' puts page number in footer, 'head' in header
+ordinary-page-number-position: C  # C = center, R = right, L = left. If page layout is 'twoside', O = odd pages and E = even pages. E.g. RO,LE puts the page number to the right on odd pages and left on even pages
+chapter-page-number-foot-or-head: foot # you may want it to be different on the chapter pages
 chapter-page-number-position: C
 
 ## position of running header ##
-running-header: true #indicate current chapter/section in header?
+running-header: true # indicate current chapter/section in header?
 running-header-foot-or-head: head
-running-header-position-leftmark: LO #marks the chapter. If layout is 'nobind', only this is used.
-running-header-position-rightmark: RE  #marks the section.
+running-header-position-leftmark: LO # marks the chapter. If layout is 'nobind', only this is used.
+running-header-position-rightmark: RE  # marks the section.
 
 draft-mark: false # add a DRAFT mark?
 draft-mark-foot-or-head: foot ##'foot' = in footer, 'head' = in header
