--- a/references.bib
+++ b/references.bib
@@ -525,3 +525,10 @@ URL= {https://www.r-inla.org/faq},
 	year = {2022},
 	bdsk-url-1 = {https://doi.org/10.1186/s12889-022-13451-y}
 }
+
+@book{mccullagh1989generalized,
+  title={Generalized linear models},
+  author={McCullagh, Peter and Nelder, John A},
+  year={1989},
+  publisher={Routledge}
+}
