--- a/templates/template.tex
+++ b/templates/template.tex
@@ -284,6 +284,20 @@ $else$
 \maketitle
 $endif$
 
+%%%%% COPYRIGHT -- added by ATH.
+$if(copyright)$
+\begin{copyrights}
+  $copyright$
+\end{copyrights}
+$endif$
+
+%%%%% ORIGINALITY -- added by ATH.
+$if(originality)$
+\begin{originality}
+  $originality$
+\end{originality}
+$endif$
+
 %%%%% DEDICATION -- If you'd like one, un-comment the following.
 $if(dedication)$
 \begin{dedication}
@@ -297,7 +311,6 @@ $if(acknowledgements)$
  	$acknowledgements$
 \end{acknowledgements}
 $endif$
-
 
 %%%%% ABSTRACT -- Nothing to do here except comment out if you don't want it.
 \begin{abstract}
