Couple of notes about multi-agyw discussion

--- a/03-multi-agyw.Rmd
+++ b/03-multi-agyw.Rmd
@@ -240,6 +240,18 @@ More involved analyses might consider prioritisation of a hypothetical intervent
 
 ## Discussion
 
+#### Distribution of risk
+
+* Connection to phylogenetic results from BDI
+* About transmission rather than incidence
+* Only age-sex structured not age-sex-behaviour
+* Does not undermine my work
+
+#### Community engagement
+
+* CSO engagement
+* Problem in Malawi with FSW
+
 ### Limitations
 
 ### Conclusion
